Fixed navbar color flickering on hover, fixed navbar spacing

--- a/src/App.css
+++ b/src/App.css
@@ -1,4 +1,4 @@
-/* ---------------------NAVBAR-------------- */
+/* ----------------------------------- */
 body {
   background: #070724;
   background-image: url("./assets/background-stars.svg");
@@ -7,8 +7,8 @@ body {
 .navbar {
   display: flex;
   border-bottom: 1px solid gray;
-  height: 10vh;
-  width: auto;
+  height: 8vh;
+  /* width: auto; */
   justify-content: space-between;
 }
 
@@ -34,21 +34,14 @@ body {
 
 ul {
   display: flex;
-  justify-content: space-evenly;
   height: auto;
-  width: 50vw;
+  width: auto;
   margin: 0;
-  padding: 0;
-}
-
-li {
-  display: flex;
 }
 
 ul a {
-  color: rgba(251, 251, 251, 0.9);
   letter-spacing: 1px;
-  text-decoration: none;
+  font-weight: 600;
 }
 
 /* ---------------------Main Info-------------- */
@@ -63,6 +56,11 @@ ul a {
   color: white;
 }
 
+.planets-list {
+  display: flex;
+  width: 50vw;
+}
+
 .planet-img {
   display: flex;
   position: relative;
@@ -74,9 +72,8 @@ ul a {
 }
 
 .planet-info {
-  height: 55vh;
+  height: 60vh;
   width: 25vw;
-  /* border: 1px solid yellow; */
 }
 
 .planet-name {
@@ -88,7 +85,6 @@ ul a {
 .planet-btn {
   display: flex;
   cursor: pointer;
-  /* justify-content: center; */
   align-items: center;
   font-size: 20px;
   font-weight: 500;
@@ -136,13 +132,13 @@ ul a {
 .nav-neptune,
 .nav-mercury {
   display: flex;
-  color: rgba(251, 251, 251, 0.65);
+  color: rgba(190, 190, 190, 1);
   position: relative;
-  justify-content: center;
+  justify-content: space-evenly;
   text-decoration: none;
   align-items: center;
-  height: 10vh;
-  width: 6vw;
+  height: 7.5vh;
+  margin-right: 1vw;
 }
 
 .nav-mercury::before,
@@ -161,6 +157,16 @@ ul a {
   height: 5px;
   transition: transform 300ms ease-in-out;
   transform: scaleX(0);
+}
+.nav-mercury:hover,
+.nav-venus:hover,
+.nav-earth:hover,
+.nav-mars:hover,
+.nav-jupiter:hover,
+.nav-saturn:hover,
+.nav-uranus:hover,
+.nav-neptune:hover {
+  color: white;
 }
 
 .nav-mercury::before {
@@ -245,7 +251,6 @@ ul a {
 
 .planet-btn:hover {
   background-color: #38384f;
-  color: white;
 }
 
 .wikipedia {
@@ -270,7 +275,6 @@ ul a {
   justify-content: space-evenly;
   align-items: center;
   height: 20vh;
-
   color: white;
 }
 
@@ -292,10 +296,10 @@ ul a {
 
 .footer .value {
   color: white;
-  font-weight: 700;
+  font-weight: 600;
 
   margin-left: 2vw;
-  font-size: 25px;
+  font-size: 30px;
 }
 
 .geology-image {
